# pico_freertos

./: .gitignore  HowTo.txt
src/: CMakeLists.txt  FreeRTOS_Kernel_import.cmake  run_cmake.bat
